# portfolio-movies-etl

./: .env.template  .gitignore  LICENSE  README.md  docker-compose.yml  portfolio-etl-api-pandas-postgres.code-workspace  recommendations.md
.github/ISSUE_TEMPLATE/: bug.md  documentation.md  feature.md
api/: .dockerignore  Dockerfile  app.py  pagination.py  prepare_data.py  pyproject.toml
api/sql/: genres.sql  genres_movies.sql  movies.sql  ratings.sql  stage_movies.sql
etl/: Dockerfile  pyproject.toml
etl/sql/ddl/: movie.sql
etl/src/movie_etl/: __main__.py  api.py  database.py  pipeline.py  storage.py
etl/src/movie_etl/files/: storage.py
etl/src/movie_etl/ingestion/: api.py  api_models.py  validation.py
etl/src/movie_etl/sql/ddl/: dim_genre.sql  dim_movie.sql  fact_rating.sql  movie.sql
pipeline/: Dockerfile  pyproject.toml
pipeline/src/pipeline/: __main__.py  config.py  datalake.py  job.py  pipeline.py
pipeline/src/pipeline/clean/: extractor.py
pipeline/src/pipeline/clean/extractor/: base.py  genres.py  movies.py  ratings.py
pipeline/src/pipeline/files/: reader.py  storage.py  writer.py
pipeline/src/pipeline/ingest/: api.py  models.py
pipeline/src/pipeline/ingestion/: api.py  models.py  validation.py
pipeline/src/pipeline/load/: database.py
pipeline/src/pipeline/models/: clean.py  ingest.py  metadata.py  pyarrow.py  type.py
pipeline/src/pipeline/serialization/: reader.py  writer.py
pipeline/src/pipeline/serialize/: reader.py  writer.py
pipeline/src/pipeline/storage/: object_storage.py
(+4 files in other folders)
