[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
]

[tool.ruff.format]
# Configure code formatting style
quote-style = "single"
indent-style = "space"
