[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "flask>=3.1.3",
    "kagglehub>=1.0.2",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
]

[tool.ruff.format]
# Configure code formatting style
quote-style = "single"
indent-style = "space"
