[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "movie-etl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.3",
    "psycopg2>=2.9.12",
    "pyarrow>=25.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.19",
]

[tool.ruff.format]
# Configure code formatting style
quote-style = "single"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/movie_etl"]
